[package]
name = "rusty_track"
version = "0.0.1"
authors = ["David Lengweiler <dave.lengw@gmail.com>"]
description = "Rust client to connect to DataTracks."
homepage = "https://github.com/data-tracks/RustyTracks"
repository = "https://github.com/data-tracks/RustyTracks"
keywords = ["stream", "data", "processing"]
license = "GPL-3"
edition = "2024"
readme = "README.md"

[lib]
name = "rusty_track"

[dependencies.schemas]
git = "https://github.com/data-tracks/TrackRails.git"
branch = "generated"

[dependencies]
flatbuffers = "25.2.10"
tracing = "0.1.41"
